Changes for v1.69
- Fix for importing KM v9.05 upgrades

Changes for v1.68
- Fix importing of KM upgrades that use the NEC 2DEV Combo or NEC 4DEV Combo protocol
- After loading a device upgrade with external functions, remove any matching keymoves that may have been imported (RMIR)
- Fix for button names being replaced by keycodes after adding keymoves (RMIR)
- Fix for Other Settings where the value in the EEPROM image isn't in the set of allowed values as defined in the RDF (RMIR)
- Add file name and timestamp to rmaster.err when loading/importing files.

Changes for v1.67
- Fix Device Combiner upgrades that use protocols with Alternate PIDs

Changes for v1.66
- Reinstate Device Combiner support
- Another "don't abort import of .IR files that use Fav/Scan" fix.
- Added support for new versions of PID 011A NEC 4DEV Combo
- Move import and export of device upgrades into the device upgrade editor.

Changes for v1.65
- Fix error loading image files when double-clicking a .rmdu file
- Fix failure to import KM files that use Manual Settings and don't specify devBits and/or cmdBits
- Add support for remotes that use the long keymove format with hex codes (JP1.x)
- Don't abort import of .IR files that use Fav/Scan
- Add DigitMap entries 333-359
- Add support for adding and editing Special Protocol Functions

Changes for v1.64
- Fix keymoves generated by external functions for remotes that use long keymoves
- Enable import/display/saving of special protocol functions (Java IR)
- Fixes for loading/saving preferences.
- Add support for multi-byte digit maps.

Changes for v1.63
- Fixed all the broken menu items (broken in v1.62)
- Fixed Device Combiner issues (importing and changing remotes)

Changes for v1.62
- Fixed importing of KM upgrades that have more than 4 device parms
- Fixed problem with digitmaps when importing raw/binary upgrades

Changes for v1.61
- Fixes for Linux

Changes for v1.60
- Fixes for EFC5 display
- Migrate to Java 5.0