@@ -538,7 +538,7 @@ Code.HCS08= 20 06 17 2F 11 08 0B B8 04 60 0E 45 23 46 02 60 \
             62 A2 AD 1B AD 1B 45 05 DC 35 6A 45 39 6C 00 60 \
             03 45 10 68 CD FF 74 CD FF 92 25 D7 81 AD 00 AD \
             00 45 01 2C 35 6C 38 A2 24 03 45 02 58 35 6A 38 \
-            A2 24 05 45 02 58 35 6C AE 6A CC FF 65 
+            A2 24 05 45 02 58 35 6C AE 6A CC FF 65
 
 [Dishplayer]
 PID=01 0F
@@ -2046,6 +2046,19 @@ Code.740=0E 19 21 80 0F E1 92 11 10 08 04 01 83 01 80 67 F6 60 02 17 22 1F 20 84
 Code.6805-RC16/18=0D 2A 21 20 11 C7 85 10 08 08 00 6D 00 00 00 70 67 F6 00 20 93 E2 B6 5C B7 5D CD 01 8F AD 35 B7 5A CD 01 92 A6 03 01 57 02 A6 0C AD 23 B7 5B AD 23 B7 5C AD 1B BE 5D BF 50 AD 15 B7 5D AD 15 B7 5E AD 0D 48 48 48 48 B7 5F A6 05 B7_66 CC 01 AF AE 02 20 02 AE 04 48 99 49 38 50 24 02 A8 03 5A 26 F4 81
 Code.HCS08=20 16 24 4B 41 CE 05 08 08 00 D9 00 00 00 00 00 DE CF EC 05 27 01 D1 04 B6 64 AE 08 CD FF 8C BF 64 B7 65 B6 61 01 B3 04 A8 F0 B7 61 6E 02 A9 6E 04 AA CC FF 5F
 
+[RC-6]
+PID=00 58
+VariantName=2
+CmdTranslator=Translator()
+CmdParms=OBC=0
+Notes=
+DevParms=Device Code
+DeviceTranslator=BitDoubler(0,8,16)
+FixedData=95 30 55 55
+Code.S3C80=47 93 41 8B 13 CE 05 08 08 00 DE 00 00 00 00 00 CC D0 52 05 35 01 A8 04 68 07 2C 08 CF 10 08 10 07 DF 10 08 10 07 90 C6 FB 03 B6 08 03 2A ED 76 00 01 6B 03 B6 04 F0 E6 10 02 E6 11 04 8D 01 46
+Code.6805-RC16/18=12 25 41 20 11 CE 05 08 08 00 6C 00 00 00 6F 68 00 00 20 92 E8 04 B6 5E AE 08 B7 50 BF 63 48 59 99 49 59 38 50 24 02 A8 03 3A 63 26 F1 BF 5E B7 5F 01 57 06 B6 5B A8 F0 B7 5B 34_66 A6 04 B7 DD CC 01 AF
+Code.HCS08=20 16 24 4B 41 CE 05 08 08 00 D9 00 00 00 00 00 DE CF EC 05 27 01 D1 04 B6 64 AE 08 CD FF 8C BF 64 B7 65 B6 61 01 B3 04 A8 F0 B7 61 6E 02 A9 6E 04 AA CC FF 5F
+
 [RC6-6-32]
 PID=01 2a
 DevParms=Device:8=128,Sub-Device:16=3844
@@ -2583,6 +2596,17 @@ Code.740=0B 1A 52 80 10 E1 72 10 08 08 01 7F 02 94 19 10 80 03 2B 00 08 07 5D 06
 Code.6805-RC16/18=11 24 52 20 18 8F 45 08 08 00 63 69 01 63 3A 13 C2 00 31 25 A8 49 3E 20 86 13 28 2A 9D 3C 58 03 5A 0B 00 5A 22 B6_79 B7_64 B6_7A B7_65 01 5A 0A B6_77 B7_6F B6_78 B7_70 17_7B 03 5A 12 B6_75 B7_6F B6_76 B7_70 20 08 A6 2A B7_6F A6 80 B7_70 CC 01 B2
 Code.HCS08=20 1B 23 4A 52 8F 45 08 08 00 D5 00 DE 00 D5 02 95 27 84 06 D0 03 54 41 0C 92 7C 55 3A 3C AC B6 60 A4 03 27 0F A1 01 26 02 17 A2 4A 48 8C 97 9E CE 7A 35 74 CC FF 5C
 
+[Sharp DVD]
+PID=00 F8
+VariantName=2
+FixedData=03 D7 39 FF FF
+DevParms=Main Device:8=0,Default Sub Device:8=[0]
+DeviceTranslator=Translator(lsb,comp,0,8,24)
+DefaultCmd=00 00
+CmdParms=OBC=0,Sub dev={1}
+CmdTranslator=Translator(lsb,comp,0,8,8) Translator(lsb,comp,1,8,0)
+#Code.S3C80=43 8B 52 8B 16 8F 45 08 08 00 CB 00 C4 00 CB 02 6A 27 70 06 8F 03 3D 40 F8 8C 8C 20 01 76 03 01 6B 09 E4 22 1C E4 23 1D 56 28 F7 76 03 02 6B 22 E4 24 1C E4 25 1D E6 29 44 E6 0C E8 F6 01 46 F6 01 0A FB 0D 00 0C EB F4 C6 3E 00 00 B0 4A F6 01 0A AF 8D 01 46
+
 [Somfy]
 PID=01 A1
 VariantName=Somfy2
@@ -2661,7 +2685,7 @@ CmdTranslator= SonyComboTranslator() Translator(lsb,3,7)
 ImportCmdTranslator=SonyComboImporter()
 CmdParmInit=PickInitializer(2,,n0,n1,n2,n3)
 Notes=This combo protocol allows you to combine as many Sony12 and \
-Sony15 codes as you like with up to 4 Sony20 codes. You enter the 4 Sony20 sub-dewice \
+Sony15 codes as you like with up to 4 Sony20 codes. You enter the 4 Sony20 sub-device \
 numbers on the Setup panel.\n\n\
 On the Functions panel, you enter the \
 codes for the functions in OBC format as usual. Then you select the desired \
